add create thread without image
